addition of jumbotron and card containers

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
     <!-- End navigation bar -->
      
     <!-- Jumbotron -->
-    <div class="jumbotron rockBackground">
+    <div class="jumbotron col-lg-12 col-md-12 col-sm-12 row-lg-12 row-md-12 row-sm-12">
       <div class="jumboCopy">
-        <h1 class="display-4">Welcome to My Portfolio</h1>
-        <p class="lead">Here you will find a showcase of my past projects to demonstrate my Front-End Development skills.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Contact Me</a>
+        <h1 class="display-4">I am Sophie McNally</h1>
+        <p class="lead">I am learning Front-End Web Development </p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Contact Me</a>  
+        </div>
       </div>
     </div>
     <!-- End jumbotron -->
@@ -114,7 +115,7 @@
     <!-- <div class="card mb-3" style="max-width: 100%;"> -->
       <div class="row aboutMe">
         <div class="cardContainer col-lg-3 col-md-4 col-sm-12">
-          <img src="Images/Sophie.jpg" class="card-img rounded-circle" alt="Image of Sophie McNally">
+          <img src="Images/Screenshot 2023-03-05 at 12.42.09.png" class="card-img rounded-circle" alt="Image of Sophie McNally">
         </div>
         <div class="col-md-8">
           <div class="card-body">
