--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h5 class="card-title">About Me</h5>
             <p class="card-text">I am currently enrolled as a Bootcamp student at University of Birmingham studying Front-End Web
               Development and User Experience.</p>
-              <a href="#" class="btn btn-primary">Download CV</a>
+              <a href="Images/CV - Sophie McNally.doc" class="btn btn-primary">Download CV</a>
 
           </div>
         </div>
